# Outhad_Gaugelab

./: .gitignore  README.md  pyproject.toml
src/: update_types.sh
src/e2etests/: conftest.py  test.py  test_all_scorers.py  test_async_execution.py  test_dataset_operations.py  test_eval_operations.py  test_judgee_traces_update.py  test_langgraph.py  test_prompt_scoring.py  test_requests_backoff.py  test_s3_trace_saving.py  test_tracer.py
src/gaugelab/: __init__.py  constants.py  evaluation_run.py  judgment_client.py  rules.py  run_evaluation.py  version_check.py
src/gaugelab/common/: __init__.py  exceptions.py  logger.py  s3_storage.py  tracer.py  utils.py
src/gaugelab/data/: __init__.py  example.py  judgment_types.py  result.py  scorer_data.py  tool.py  trace.py  trace_run.py
src/gaugelab/integrations/: langgraph.py
src/gaugelab/judges/: __init__.py  base_judge.py  litellm_judge.py  mixture_of_judges.py  together_judge.py  utils.py
src/gaugelab/scorers/: __init__.py  agent_scorer.py  api_scorer.py  base_scorer.py  example_scorer.py  score.py  utils.py
src/gaugelab/tracer/: __init__.py
src/gaugelab/utils/: alerts.py  file_utils.py
src/tests/: test_async_execution.py
src/tests/common/: test_exceptions.py  test_tracer.py  test_utils.py
src/tests/data/: test_example.py  test_result.py
src/tests/dev/: test_assert_test.py
src/tests/evals/: test_evaluation_run.py  test_run_evaluation.py
src/tests/judges/: test_judge_utils.py  test_litellm_judge.py  test_mixture_of_judges.py  test_together_judge.py
src/tests/scorers/: test_api_scorer.py  (+3 more)
(+19 files in other folders)
